workspace = { members = ["egui_glow"] }
[package]
name = "custom_3d_glow"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
eframe = { version = "0.25.0" }
env_logger = { version = "0.11.0" }
